<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="95"
            android:orientation="horizontal"
            android:padding="16dp"
            >

            <RelativeLayout

                android:id="@+id/mainLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/secondaryLayout"
                android:layout_toLeftOf="@+id/secondaryLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">
                <TextView
                    android:id="@+id/lines"
                    android:background="@drawable/border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:text="@string/lines"/>
<!--                <SurfaceView-->
<!--                    android:id="@+id/board"-->
<!--                    android:layout_below="@+id/lines"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"/>-->

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/secondaryLayout"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp">

                <TextView
                    android:id="@+id/top"
                    android:padding="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/top"
                    android:textColor="@android:color/black"
                    android:background="@drawable/border"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/score"
                    android:padding="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:textColor="@android:color/black"
                    android:layout_below="@+id/top"
                    android:background="@drawable/border"/>

                <RelativeLayout
                    android:id="@+id/nextLayout"
                    android:layout_marginTop="70dp"
                    android:layout_below="@+id/score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border">
<!--                    <SurfaceView-->
<!--                        android:id="@+id/nextOne"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="100dp"-->
<!--                        android:layout_below="@+id/next"-->
<!--                        />-->
                </RelativeLayout>

                <TextView
                    android:id="@+id/level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:padding="7dp"
                    android:text="@string/level"
                    android:textColor="@android:color/black"
                    android:layout_below="@+id/nextLayout"
                    android:background="@drawable/border"
                    />

                <Button
                    android:id="@+id/gameButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Button.White"
                    android:textSize="12sp"
                    android:text="@string/start"
                    android:layout_below="@+id/level"
                    android:layout_marginTop="15dp"/>
                <Button
                    android:id="@+id/restartButton"
                    android:layout_below="@+id/gameButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/restart"/>

            </RelativeLayout>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/buttonPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingBottom="70dp"
            android:layout_gravity="bottom"
            android:layout_weight="5">
            <ImageButton
                android:id="@+id/leftArrow"
                android:layout_width="58dp"
                android:layout_height="60dp"
                android:src="@drawable/arrowleft"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />
            <ImageButton
                android:id="@+id/rightArrow"
                android:layout_width="58dp"
                android:layout_height="60dp"
                android:src="@drawable/arrowright"
                android:layout_toRightOf="@+id/leftArrow"
                android:layout_toEndOf="@+id/leftArrow"
                android:layout_marginLeft="35dp"
                android:layout_marginStart="35dp" />
            <ImageButton
                android:id="@+id/rotateArrow"
                android:layout_width="58dp"
                android:layout_height="60dp"
                android:src="@drawable/arrowrotate"
                android:layout_toLeftOf="@id/dropArrow"
                android:layout_marginLeft="35dp"
                android:layout_marginStart="35dp"
                android:layout_toStartOf="@id/dropArrow" />
            <ImageButton
                android:id="@+id/dropArrow"
                android:layout_width="58dp"
                android:layout_height="60dp"
                android:src="@drawable/arrowdrop"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="35dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp" />

        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>